compile and test hosh-spi